deploy2/kube/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  # Rollback is not possible since we don't have revision history!
  revisionHistoryLimit: 2
  replicas: 2
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: quadrivium.azurecr.io/tutti:v1.2
        name: app
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /appmedia
          name: app-media
      restartPolicy: Always
      volumes:
      - name: app-media
        persistentVolumeClaim:
          claimName: app-media
status: {}
