deploy2/kube/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  # Rollback is not possible since we don't have revision history!
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        app: postgres-container
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: tutti
        - name: POSTGRES_PASSWORD
          value: tutti
        - name: POSTGRES_USER
          value: tutti
        image: postgres:12.2-alpine
        name: db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: postgres-data
          subPath: postgres
        ports:
        - containerPort: 5432
      restartPolicy: Always
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
status: {}
