deploy2/kube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
