deploy2/kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tutti-ingress
  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
  - hosts:
    - t.esmgquadrivium.nl
    secretName: tutti-tls-secret
  rules:
  - host: t.esmgquadrivium.nl
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8000
